// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList Account column display shows descriptor.idx./account property in table: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BButton> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) v-model usage on component has changed in Vue 3. Component that expects to work with v-model should now use the "modelValue" prop and emit the "update:modelValue" event. You can update the usage and then opt-in to Vue 3 behavior on a per-component basis with \`compatConfig: { COMPONENT_V_MODEL: false }\`.
  Details: https://v3-migration.vuejs.org/breaking-changes/v-model.html",
    "
",
    " at <FrField",
    "modelValue=true",
    "onUpdate:modelValue=fn",
    "testid="cert-filter-certify"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <FrCheckbox",
    "testid="cert-filter-certify"",
    "name="columnSelected"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <FrCheckbox",
    "testid="cert-filter-certify"",
    "name="columnSelected"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <FrCheckbox",
    "testid="cert-filter-certify"",
    "name="columnSelected"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (2)",
    "
",
    " at <BFormCheckbox",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "onModelCompat:input=fn",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="mr-0 zindex-1 align-middle"",
    " ...",
    ">",
    "
",
    " at <FrCheckbox",
    "testid="cert-filter-certify"",
    "name="columnSelected"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (2)",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="mr-0 zindex-1 align-middle"",
    " ...",
    ">",
    "
",
    " at <FrCheckbox",
    "testid="cert-filter-certify"",
    "name="columnSelected"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BFormCheckbox> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="mr-0 zindex-1 align-middle"",
    " ...",
    ">",
    "
",
    " at <FrCheckbox",
    "testid="cert-filter-certify"",
    "name="columnSelected"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "testid="cert-filter-certify"",
    "class="mr-2"",
    "name="columnSelected"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (3)",
    "
",
    " at <SelectInput",
    "id="certificationTaskUser"",
    "type="select"",
    "label="governance.certificationTask.user"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="text-muted w-100 certification-task-filter-dropdown certification-task-filter-list"",
    "id="certificationTaskUser"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (4)",
    "
",
    " at <VueMultiselect",
    "id="certificationTaskUser"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="certificationTaskUser"",
    "name="governance.certificationTask.user"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "id="certificationTaskUser"",
    "type="select"",
    "label="governance.certificationTask.user"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="text-muted w-100 certification-task-filter-dropdown certification-task-filter-list"",
    "id="certificationTaskUser"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "appear" with v-bind value \`false\` will render appear="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "name="multiselect__loading"",
    ">",
    "
",
    " at <VueMultiselect",
    "id="certificationTaskUser"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="certificationTaskUser"",
    "name="governance.certificationTask.user"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "id="certificationTaskUser"",
    "type="select"",
    "label="governance.certificationTask.user"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="text-muted w-100 certification-task-filter-dropdown certification-task-filter-list"",
    "id="certificationTaskUser"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "persisted" with v-bind value \`false\` will render persisted="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "name="multiselect__loading"",
    ">",
    "
",
    " at <VueMultiselect",
    "id="certificationTaskUser"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="certificationTaskUser"",
    "name="governance.certificationTask.user"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "id="certificationTaskUser"",
    "type="select"",
    "label="governance.certificationTask.user"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="text-muted w-100 certification-task-filter-dropdown certification-task-filter-list"",
    "id="certificationTaskUser"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_ENUMERATED_COERCION) Enumerated attribute "spellcheck" with v-bind value \`false\` will render the value as-is instead of coercing the value to "true" in Vue 3. Always use explicit "true" or "false" values for enumerated attributes. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_ENUMERATED_COERCION: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <VueMultiselect",
    "id="certificationTaskUser"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="certificationTaskUser"",
    "name="governance.certificationTask.user"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "id="certificationTaskUser"",
    "type="select"",
    "label="governance.certificationTask.user"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="text-muted w-100 certification-task-filter-dropdown certification-task-filter-list"",
    "id="certificationTaskUser"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BFormGroup",
    "class="mb-0"",
    ">",
    "
",
    " at <TaskFilters",
    "key=0",
    "onFilterCertificationItems=fn<bound filterItems>",
    "actor-id=""",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (5)",
    "
",
    " at <SortModal",
    "onUpdateColumns=fn<bound updateColumns>",
    "onHidden=fn<bound closeSortModal>",
    "task-list-columns=",
    [],
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <SortModal",
    "onUpdateColumns=fn<bound updateColumns>",
    "onHidden=fn<bound closeSortModal>",
    "task-list-columns=",
    [],
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (4)",
    "
",
    " at <BModal",
    "id="certification-account-sort"",
    "ok-title="common.apply"",
    "title="governance.certificationTask.customizeColumns"",
    " ...",
    ">",
    "
",
    " at <SortModal",
    "onUpdateColumns=fn<bound updateColumns>",
    "onHidden=fn<bound closeSortModal>",
    "task-list-columns=",
    [],
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BModal",
    "id="certification-account-sort"",
    "ok-title="common.apply"",
    "title="governance.certificationTask.customizeColumns"",
    " ...",
    ">",
    "
",
    " at <SortModal",
    "onUpdateColumns=fn<bound updateColumns>",
    "onHidden=fn<bound closeSortModal>",
    "task-list-columns=",
    [],
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (5)",
    "
",
    " at <Form",
    "ref="observer"",
    "as="span"",
    ">",
    "
",
    " at <CertificationForwardModal",
    "id=""",
    "bulk=false",
    "show-confirm=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (6)",
    "
",
    " at <ConfirmActionModal",
    "modal-options=",
    {},
    "modal-id="certification-account-confirm-action"",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (7)",
    "
",
    " at <Form",
    "ref="observer"",
    "as="span"",
    ">",
    "
",
    " at <CertificationTaskReassignModal",
    "onChangeSaving=fn<bound toggleSaving>",
    "modal-id="certification-account-reassign"",
    "onRefreshData=fn",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (8)",
    "
",
    " at <CommentsModal",
    "enable-add-comments=true",
    "comments=",
    [],
    "modal-id="certification-account-view-comments"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (9)",
    "
",
    " at <AddCommentModal",
    "onAddComment=fn<bound addComment>",
    "modal-id="certification-account-add-comment"",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (10)",
    "
",
    " at <ActivityModal",
    "activity=",
    [],
    "modal-id="certification-account-activity"",
    "onCloseModal=fn",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (11)",
    "
",
    " at <ReviewersModal",
    "reviewers=",
    [],
    "hide-creation-button=true",
    "modal-id="certification-account-view-reviewers"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (12)",
    "
",
    " at <EditReviewerModal",
    "reviewer=null",
    "is-saving=false",
    "is-deleting=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (13)",
    "
",
    " at <EntitlementModal",
    "application=null",
    "entitlement=null",
    "glossary-schema=",
    [],
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (14)",
    "
",
    " at <RoleModal",
    "glossary-schema=",
    [],
    "role=",
    {},
    "modal-id="certification-account-role"",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (15)",
    "
",
    " at <GovernanceUserDetailsModal",
    "manager=",
    {},
    "user=",
    {},
    "user-details=",
    {
      "userAccounts": {
        "result": [],
      },
      "userEntitlements": {
        "result": [],
      },
      "userRoles": {
        "result": [],
      },
    },
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) vm.$on/$once/$off() have been removed. Use an external event emitter library instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/events-api.html",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (5)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (6)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) (2)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (2)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (3)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (16)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BTable> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (6)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) Detected conflicting key "bvListeners" when merging data option values. In Vue 3, data keys are merged shallowly and will override one another.
  Details: https://v3-migration.vuejs.org/breaking-changes/data-option.html#mixin-merge-behavior-change",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (4)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (7)",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (2)",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (6)",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (5)",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (8)",
    "
",
    " at <BTh",
    "class="position-relative text-truncate fr-access-cell"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (3)",
    "
",
    " at <BTh",
    "class="position-relative text-truncate fr-access-cell"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (7)",
    "
",
    " at <BTh",
    "class="position-relative text-truncate fr-access-cell"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (6)",
    "
",
    " at <BTh",
    "class="position-relative text-truncate fr-access-cell"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BTh> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BTh",
    "class="position-relative text-truncate fr-access-cell"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (9)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (4)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (8)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (7)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (9)",
    "
",
    " at <BMedia",
    "onClick=fn",
    "class="clickable"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (17)",
    "
",
    " at <BMedia",
    "onClick=fn",
    "class="clickable"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (2)",
    "
",
    " at <BMedia",
    "onClick=fn",
    "class="clickable"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (10)",
    "
",
    " at <BMediaAside",
    "right=false",
    "verticalAlign="top"",
    ">",
    "
",
    " at <BMedia",
    "onClick=fn",
    "class="clickable"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (11)",
    "
",
    " at <BImg",
    "class="mt-2"",
    "height="24"",
    "width="24"",
    " ...",
    ">",
    "
",
    " at <BMediaAside",
    "right=false",
    "verticalAlign="top"",
    ">",
    "
",
    " at <BMedia",
    "onClick=fn",
    "class="clickable"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (12)",
    "
",
    " at <BMediaBody>",
    "
",
    " at <BMedia",
    "onClick=fn",
    "class="clickable"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "disabled" with v-bind value \`false\` will render disabled="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTooltip",
    "target="flags-testId-0"",
    "triggers="hover"",
    "placement="top"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noFade" with v-bind value \`false\` will render noFade="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTooltip",
    "target="flags-testId-0"",
    "triggers="hover"",
    "placement="top"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noninteractive" with v-bind value \`false\` will render noninteractive="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTooltip",
    "target="flags-testId-0"",
    "triggers="hover"",
    "placement="top"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "show" with v-bind value \`false\` will render show="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTooltip",
    "target="flags-testId-0"",
    "triggers="hover"",
    "placement="top"",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (18)",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (10)",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (3)",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (8)",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (19)",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (3)",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (11)",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (9)",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (20)",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (12)",
    "
",
    " at <BLink",
    "class="dropdown-item"",
    "onClick=fn<bound onClick>",
    "ref="item"",
    " ...",
    ">",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (5)",
    "
",
    " at <BLink",
    "class="dropdown-item"",
    "onClick=fn<bound onClick>",
    "ref="item"",
    " ...",
    ">",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (13)",
    "
",
    " at <BLink",
    "class="dropdown-item"",
    "onClick=fn<bound onClick>",
    "ref="item"",
    " ...",
    ">",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (4)",
    "
",
    " at <BLink",
    "class="dropdown-item"",
    "onClick=fn<bound onClick>",
    "ref="item"",
    " ...",
    ">",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (10)",
    "
",
    " at <BLink",
    "class="dropdown-item"",
    "onClick=fn<bound onClick>",
    "ref="item"",
    " ...",
    ">",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BLink> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BLink",
    "class="dropdown-item"",
    "onClick=fn<bound onClick>",
    "ref="item"",
    " ...",
    ">",
    "
",
    " at <BDropdownItem",
    "onClick=fn",
    "disabled=false",
    "data-testid="cert-reviewers-button-null"",
    ">",
    "
",
    " at <BDropdown",
    "no-caret=""",
    "boundary="window"",
    "toggle-class="p-1 d-inline"",
    " ...",
    ">",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList Role based grants shows revoke for non-role based: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (4)",
    "
",
    " at <TaskActionsCell",
    "onAction=fn<bound handleAction>",
    "campaign-details=",
    {},
    "cert-grant-type=null",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList Verify items are disabled and do not exist if is in staging with showGroupBy and test certificationGrantType, allowing bulk with exception duration and enabled forward: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (21)",
    "
",
    " at <TaskMultiSelect",
    "key=0",
    "onBulkAction=fn<bound bulkAction>",
    "onSelectTasks=fn",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {
      "allowBulkCertify": true,
      "enableForward": true,
      "exceptionDuration": 1,
      "status": "staging",
    },
    "certificationGrantType="test"",
    "showGroupBy=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (5)",
    "
",
    " at <TaskMultiSelect",
    "key=0",
    "onBulkAction=fn<bound bulkAction>",
    "onSelectTasks=fn",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {
      "allowBulkCertify": true,
      "enableForward": true,
      "exceptionDuration": 1,
      "status": "staging",
    },
    "certificationGrantType="test"",
    "showGroupBy=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (14)",
    "
",
    " at <BDropdownDivider>",
    "
",
    " at <BDropdown",
    "data-testid="bulk-select-dropdown"",
    "toggle-class="p-1"",
    "variant="link"",
    ">",
    "
",
    " at <TaskMultiSelect",
    "key=0",
    "onBulkAction=fn<bound bulkAction>",
    "onSelectTasks=fn",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {
      "allowBulkCertify": true,
      "enableForward": true,
      "exceptionDuration": 1,
      "status": "staging",
    },
    "certificationGrantType="test"",
    "showGroupBy=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList Verify items are enabled and do exist if is not in staging with showGroupBy and test certificationGrantType, allowing bulk with exception duration and enabled forward: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "value" with v-bind value \`false\` will render value="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrField",
    "key=0",
    "onChange=fn<onChange>",
    "class="m-4"",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=""",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {
      "allowBulkCertify": true,
      "enableForward": true,
      "exceptionDuration": 1,
      "status": "in-progress",
    },
    "certificationGrantType="test"",
    "showGroupBy=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList Verify items does exist if it not in staging with showGroupBy and accounts certificationGrantType, allowing bulk with exception duration and enabled forward: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BTr> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BTr",
    "class="b-table-row-selected table-active"",
    "variant=null",
    "id=null",
    " ...",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignDetails=",
    {
      "allowBulkCertify": true,
      "enableForward": true,
      "exceptionDuration": 1,
      "status": "in-progress",
    },
    "certificationGrantType="accounts"",
    "showGroupBy=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList line item details edit reviewer isLastSignOffReviewer true: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isAllowedDeletion" with v-bind value \`false\` will render isAllowedDeletion="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrEditReviewerModal",
    "reviewer=",
    {
      "id": "/managed/role/123456",
      "name": "test",
      "permissions": {
        "accept": true,
        "certify": true,
        "challenge": true,
        "comment": true,
        "consult": true,
        "delegate": true,
        "exception": true,
        "forward": true,
        "reassign": true,
        "removeActor": true,
        "reset": true,
        "revoke": true,
        "save": true,
        "signoff": true,
      },
    },
    "is-saving=false",
    "is-deleting=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList line item details openReviewersModal sets reviewer data and opens view reviewers modal: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hideCreationButton" with v-bind value \`false\` will render hideCreationButton="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrReviewersModal",
    "reviewers=",
    [
      {
        "givenName": "test",
        "id": "/managed/user/12345",
      },
      {
        "id": "/managed/rolw/12345",
        "name": "test",
      },
    ],
    "hide-creation-button=false",
    "modal-id="certification-account-view-reviewers"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList loadItemsList should set the tasks data with the mapped data with selected property: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "bordered" with v-bind value \`false\` will render bordered="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "borderless" with v-bind value \`false\` will render borderless="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "captionTop" with v-bind value \`false\` will render captionTop="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "dark" with v-bind value \`false\` will render dark="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "fixed" with v-bind value \`false\` will render fixed="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hover" with v-bind value \`false\` will render hover="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noBorderCollapse" with v-bind value \`false\` will render noBorderCollapse="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "outlined" with v-bind value \`false\` will render outlined="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "small" with v-bind value \`false\` will render small="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "stickyHeader" with v-bind value \`false\` will render stickyHeader="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "striped" with v-bind value \`false\` will render striped="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "stacked" with v-bind value \`false\` will render stacked="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "footClone" with v-bind value \`false\` will render footClone="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noFooterSorting" with v-bind value \`false\` will render noFooterSorting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noSortReset" with v-bind value \`false\` will render noSortReset="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "sortDesc" with v-bind value \`false\` will render sortDesc="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "sortIconLeft" with v-bind value \`false\` will render sortIconLeft="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "sortNullLast" with v-bind value \`false\` will render sortNullLast="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noSelectOnClick" with v-bind value \`false\` will render noSelectOnClick="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "selectable" with v-bind value \`false\` will render selectable="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "busy" with v-bind value \`false\` will render busy="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noProviderFiltering" with v-bind value \`false\` will render noProviderFiltering="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noProviderPaging" with v-bind value \`false\` will render noProviderPaging="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noProviderSorting" with v-bind value \`false\` will render noProviderSorting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "key=1",
    "onRowSelected=fn<bound onRowSelected>",
    "onSortChanged=fn<bound sortChange>",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TaskList paginationChange should call getItems with the pagination page: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "active" with v-bind value \`false\` will render active="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "block" with v-bind value \`false\` will render block="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) (2)",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "exact" with v-bind value \`false\` will render exact="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "exactPath" with v-bind value \`false\` will render exactPath="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noPrefetch" with v-bind value \`false\` will render noPrefetch="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "pill" with v-bind value \`false\` will render pill="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "replace" with v-bind value \`false\` will render replace="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "squared" with v-bind value \`false\` will render squared="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BButton",
    "key=0",
    "onClick=fn",
    "class="mr-2"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "card" with v-bind value \`false\` will render card="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrNoData",
    "key=2",
    "card=false",
    "class="mb-4"",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "bulk" with v-bind value \`false\` will render bulk="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrForwardModal",
    "id=""",
    "bulk=false",
    "show-confirm=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "showConfirm" with v-bind value \`false\` will render showConfirm="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrForwardModal",
    "id=""",
    "bulk=false",
    "show-confirm=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "allSelected" with v-bind value \`false\` will render allSelected="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrReassignModal",
    "onChangeSaving=fn<bound toggleSaving>",
    "modal-id="certification-account-reassign"",
    "onRefreshData=fn",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isSaving" with v-bind value \`false\` will render isSaving="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrEditReviewerModal",
    "reviewer=null",
    "is-saving=false",
    "is-deleting=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isDeleting" with v-bind value \`false\` will render isDeleting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrEditReviewerModal",
    "reviewer=null",
    "is-saving=false",
    "is-deleting=false",
    " ...",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isTesting" with v-bind value \`false\` will render isTesting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrRoleModal",
    "glossary-schema=",
    [],
    "role=",
    {},
    "modal-id="certification-account-role"",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "onlyDetails" with v-bind value \`false\` will render onlyDetails="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrGovernanceUserDetailsModal",
    "manager=",
    {},
    "user=",
    {},
    "user-details=",
    {
      "userAccounts": {
        "result": [],
      },
      "userEntitlements": {
        "result": [],
      },
      "userRoles": {
        "result": [],
      },
    },
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "buttonSpinner" with v-bind value \`false\` will render buttonSpinner="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrSpinner",
    "key=0",
    "class="py-5"",
    ">",
    "
",
    " at <TaskList",
    "campaignId="test-id"",
    "campaignDetails=",
    {},
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
